# tds

./: .python-version  README.md  pyproject.toml  repositories.csv  users.csv
scripts/: analyse.py  fetch_users.py  local_types.py
